src/css/index.scss
/* GLOBAL */
// Site Colors
@import 'theme'; /* theme colors */

/* sitewide styles */
@import '../../node_modules/@cagov/ds-base-css/src/core';

/* COMPONENTS/BLOCKS */
@import '../../node_modules/@cagov/ds-site-header/src/index.scss';
@import '../../node_modules/@cagov/ds-link-grid/src/index.scss'; /* copied from blocks */
@import '../../node_modules/@cagov/ds-feature-card/src/index.scss'; /* copied from block */
@import '../../node_modules/@cagov/ds-skip-to-content/src/index.scss';
@import '../../node_modules/@cagov/ds-table/src/index.scss';

/* NAVIGATION ELEMENTS */
@import '../../node_modules/@cagov/ds-statewide-header/src/index.scss';
@import '../../node_modules/@cagov/ds-site-footer/src/index.scss';
@import '../../node_modules/@cagov/ds-statewide-footer/src/index.scss';
@import '../../node_modules/@cagov/ds-site-navigation/src/index.scss';

@import './blog';

@import './feature-card-variation';

@import './horizontal-list';

@import './alternating-grid';

@import './aligned-dual-group';



/* temp */
@import './temp-buttons';


// theme overrides
body {
  background: var(--top-gradient)
}
.official-header {
  background: var(--primary-dark-color, #00315f);
  color: #fff;
}
cagov-site-navigation, .site-header {
  background: transparent;
}
.official-header svg .gov {
  fill: var(--white,#fff);
}
h1, h2, h3, h4, h5, h6 {
  color: var(--primary0color, #0D4F8C);
}

/* need this globally, not sure why it was missing */
a {
  text-underline-position: under;
}

